[tool.poetry]
name = "anempiricalstudyontheuseofsnapshottesting"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
pygit2 = "^1.12.2"
plotly = "^5.15.0"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
